#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([denetX],[VERSION],[caglar@ulakbim.gov.tr])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_SRCDIR([src/constant.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
if test -z $CXXFLAGS; then
      CXXFLAGS=''
    fi
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldependent_lib':
AC_CHECK_LIB([dependent_lib], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h netdb.h netinet/in.h stdint.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_CHECK_FUNCS([bzero]) 
AC_CHECK_FUNCS([gethostbyname]) 
AC_CHECK_FUNCS([gettimeofday]) 
AC_CHECK_FUNCS([memmove])
AC_CHECK_FUNCS([memset]) 
AC_CHECK_FUNCS([pow]) 
AC_CHECK_FUNCS([select]) 
AC_CHECK_FUNCS([socket]) 
AC_CHECK_FUNCS([sqrt]) 
AC_CHECK_FUNCS([strchr]) 
AC_CHECK_FUNCS([strdup]) 
AC_CHECK_FUNCS([strtoul]) 
AC_CHECK_HEADERS([arpa/inet.h]) 
AC_CHECK_HEADERS([fcntl.h]) 
AC_CHECK_HEADERS([float.h])
AC_CHECK_HEADERS([netdb.h])
AC_CHECK_HEADERS([netinet/in.h]) 
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([strings.h]) 
AC_CHECK_HEADERS([sys/socket.h]) 
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([unistd.h]) 
AC_C_INLINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC 
AC_PROG_CC

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([bzero gethostbyname gettimeofday memmove memset pow select socket sqrt strchr strdup strtoul])

AC_CONFIG_FILES([Makefile
                 data/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT
